--- a/unsupervised_machinne_learnning.ipynb
+++ b/unsupervised_machinne_learnning.ipynb
@@ -6,7 +6,7 @@
       "name": "unsupervised_machinne_learnning.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMIHIAkEqxAAiegqq1K168b",
+      "authorship_tag": "ABX9TyMaKXlgOP0OkTXxMkAe6rp/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,17 +61,19 @@
     {
       "cell_type": "code",
       "source": [
+        "#a data to 5000 songs\n",
         "data_set_5000=pd.read_csv('https://raw.githubusercontent.com/aslam7861/Machine_Learning_Project/main/df_audio_features_5000')"
       ],
       "metadata": {
         "id": "BZT2UMmMUDJE"
       },
-      "execution_count": 24,
+      "execution_count": 125,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "#cleaning the data with space in columns name\n",
         "col= data_set_5000.columns\n",
         "data_set_5000.columns=[a.split()[0] for a in col]\n",
         "\n"
@@ -79,7 +81,7 @@
       "metadata": {
         "id": "JV2tpI-AUL9Y"
       },
-      "execution_count": 35,
+      "execution_count": 126,
       "outputs": []
     },
     {
